--- a/About.css
+++ b/About.css
@@ -1,311 +1,766 @@
- .u-section-1 {
-  background-image: none;
-}
-
 .u-section-1 .u-sheet-1 {
-  min-height: 678px;
+  min-height: 680px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 668px;
-  height: 668px;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 0 0 0 auto;
+  width: 632px;
+  height: 632px;
+  margin: 24px 0 0 auto;
 }
 
 .u-section-1 .u-group-1 {
-  width: 646px;
-  min-height: 646px;
+  width: 570px;
+  min-height: 485px;
+  background-image: none;
   height: auto;
-  margin: -657px auto 21px 0;
+  margin: -522px auto 61px 0;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding: 30px;
 }
 
 .u-section-1 .u-text-1 {
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 40px 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.5rem;
-  line-height: 1.8;
-  --animation-custom_in-translate_x: -300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 73px 70px 0 0;
+  margin: 32px 0 0;
+}
+
+.u-section-1 .u-btn-1 {
+  text-transform: uppercase;
+  font-weight: 600;
+  background-image: none;
+  letter-spacing: 1px;
+  margin: 21px auto 0 0;
+  padding: 17px 40px 18px 38px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 634px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 582px;
-    height: 582px;
-    margin-top: 8px;
+    min-height: 754px;
   }
 
   .u-section-1 .u-group-1 {
-    width: 510px;
-    min-height: 618px;
-    margin-top: -618px;
-    margin-bottom: -28px;
+    width: 470px;
     height: auto;
-  }
-
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 15px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 28px;
-    margin-right: 80px;
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1005px;
+    min-height: 1149px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 526px;
-    height: 526px;
-    margin-top: 12px;
-    margin-right: auto;
+    width: 540px;
+    height: 540px;
+    margin-top: 51px;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 698px;
-    margin-top: -983px;
-    margin-bottom: -160px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    margin-top: 23px;
+    margin-bottom: 51px;
   }
 
-  .u-section-1 .u-text-1 {
-    margin-top: 5px;
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 533px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 15px;
+  .u-section-1 .u-image-1 {
+    width: 340px;
+    height: 340px;
+  }
+
+  .u-section-1 .u-group-1 {
+    width: 340px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 592px;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 22px 427px 0 0;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 1.125rem;
+  font-weight: 600;
+  margin: 50px 196px 0 0;
+}
+
+.u-section-2 .u-btn-1 {
+  border-style: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-image: none;
+  font-size: 1.125rem;
+  margin: 22px auto 22px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    margin-right: 227px;
+  }
+
+  .u-section-2 .u-text-2 {
     margin-right: 0;
   }
 }
 
-@media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1023px;
-  }
-
-  .u-section-1 .u-image-1 {
-    height: 504px;
-    margin-top: 7px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-group-1 {
-    min-height: 571px;
-    margin-top: -1009px;
-    margin-bottom: -60px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1070px;
-  }
-
-  .u-section-1 .u-image-1 {
-    height: 340px;
-    margin-top: 716px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-group-1 {
-    min-height: 701px;
-    margin-top: -1056px;
-    margin-bottom: 60px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-}.u-section-2 .u-sheet-1 {
-  min-height: 714px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 15px 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 841px;
-  }
-
-  .u-section-2 .u-text-1 {
-    width: auto;
-  }
-}
-
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 938px;
+    min-height: 642px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 20px;
+    margin-right: 7px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 20px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1196px;
+    min-height: 806px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-right: 0;
   }
+} .u-section-3 {
+  background-image: none;
 }
 
-@media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1485px;
-  }
-}.u-section-3 .u-sheet-1 {
-  min-height: 1662px;
-  margin-bottom: 0;
+.u-section-3 .u-sheet-1 {
+  min-height: 531px;
 }
 
-.u-section-3 .u-gallery-1 {
-  height: 1577px;
-  margin: 25px 0 60px;
+.u-section-3 .u-list-1 {
+  grid-template-rows: repeat(1, auto);
+  grid-auto-rows: 100%;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
-.u-section-3 .u-gallery-inner-1 {
-  grid-template-columns: repeat(3, auto);
+.u-section-3 .u-repeater-1 {
+  grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
+  min-height: 411px;
   grid-gap: 10px;
 }
 
-.u-section-3 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-list-item-1 {
+  background-image: none;
 }
 
-.u-section-3 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-container-layout-1 {
+  padding: 0 23px 30px;
 }
 
-.u-section-3 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-icon-1 {
+  height: 87px;
+  width: 87px;
+  background-image: none;
+  margin: 0 auto 0 0;
+  padding: 23px;
 }
 
-.u-section-3 .u-over-slide-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-text-1 {
+  margin: 43px auto 0 0;
 }
 
-.u-section-3 .u-over-slide-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-text-2 {
+  font-style: normal;
+  margin: 30px 14px 0 0;
 }
 
-.u-section-3 .u-over-slide-6 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-list-item-2 {
+  background-image: none;
 }
 
-.u-section-3 .u-over-slide-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-container-layout-2 {
+  padding: 0 23px 30px;
 }
 
-.u-section-3 .u-over-slide-8 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-icon-2 {
+  height: 87px;
+  width: 87px;
+  background-image: none;
+  margin: 0 auto 0 0;
+  padding: 23px;
 }
 
-.u-section-3 .u-over-slide-9 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+.u-section-3 .u-text-3 {
+  letter-spacing: normal;
+  font-size: 1.25rem;
+  text-transform: none;
+  font-weight: bold;
+  margin: 43px auto 0 0;
+}
+
+.u-section-3 .u-text-4 {
+  font-style: normal;
+  margin: 30px 14px 0 0;
+}
+
+.u-section-3 .u-list-item-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 0 23px 30px;
+}
+
+.u-section-3 .u-icon-3 {
+  height: 87px;
+  width: 87px;
+  background-image: none;
+  margin: 0 auto 0 0;
+  padding: 23px;
+}
+
+.u-section-3 .u-text-5 {
+  letter-spacing: normal;
+  font-size: 1.25rem;
+  text-transform: none;
+  font-weight: bold;
+  margin: 43px auto 0 0;
+}
+
+.u-section-3 .u-text-6 {
+  font-style: normal;
+  margin: 30px 14px 0 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1385px;
+  .u-section-3 .u-repeater-1 {
+    min-height: 338px;
   }
 
-  .u-section-3 .u-gallery-1 {
-    height: 1300px;
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-3 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 2574px;
-  }
-
-  .u-section-3 .u-gallery-1 {
-    height: 2489px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-gallery-inner-1 {
-    grid-template-columns: repeat(2, auto);
+  .u-section-3 .u-repeater-1 {
+    min-height: 793px;
+    grid-template-columns: repeat(2, calc(50% - 5px));
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 2332px;
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 100%;
   }
 
-  .u-section-3 .u-gallery-1 {
-    height: 6720px;
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 795px;
+}
+
+.u-section-4 .u-text-1 {
+  margin: 69px 459px 0 0;
+}
+
+.u-section-4 .u-text-2 {
+  font-weight: 400;
+  font-size: 1.125rem;
+  margin: 38px 517px 0 0;
+}
+
+.u-section-4 .u-gallery-1 {
+  height: 415px;
+  margin-top: 90px;
+  margin-bottom: -320px;
+  grid-gap: 17px 17px;
+}
+
+.u-section-4 .u-gallery-inner-1 {
+  grid-template-columns: repeat(3, auto);
+}
+
+.u-section-4 .u-gallery-item-1 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-item-2 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-item-3 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-item-4 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-4 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-item-5 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-5 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-item-6 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-6 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-item-7 {
+  margin-right: 17px;
+}
+
+.u-section-4 .u-over-slide-7 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
+}
+
+.u-section-4 .u-gallery-nav-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.u-section-4 .u-gallery-nav-2 {
+  position: absolute;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 259px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-right: 317px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 39px;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-right: 97px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-right: 0;
+  }
+} .u-section-5 {
+  background-image: none;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 955px;
+}
+
+.u-section-5 .u-group-1 {
+  min-height: 835px;
+  width: 658px;
+  height: auto;
+  margin: 60px 0 0 auto;
+}
+
+.u-section-5 .u-container-layout-1 {
+  padding: 25px 30px;
+}
+
+.u-section-5 .u-text-1 {
+  font-size: 1.25rem;
+  margin: 0 auto 0 0;
+}
+
+.u-section-5 .u-image-1 {
+  height: 580px;
+  margin-top: 85px;
+  margin-bottom: 0;
+  object-position: 93.01% 50%;
+}
+
+.u-section-5 .u-list-1 {
+  grid-template-rows: repeat(1, auto);
+  width: 482px;
+  margin: -835px auto 60px 0;
+}
+
+.u-section-5 .u-repeater-1 {
+  grid-template-columns: repeat(1, 100%);
+  min-height: 779px;
+  margin-left: 0;
+  margin-right: auto;
+  grid-gap: 10px;
+}
+
+.u-section-5 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-5 .u-group-2 {
+  width: 196px;
+  min-height: 196px;
+  height: auto;
+  margin: 0 auto 0 0;
+}
+
+.u-section-5 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-5 .u-text-2 {
+  font-weight: 700;
+  font-size: 4.5rem;
+  margin: 0 auto;
+}
+
+.u-section-5 .u-text-3 {
+  margin: 46px 0 0;
+}
+
+.u-section-5 .u-text-4 {
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-container-layout-4 {
+  padding: 20px 30px;
+}
+
+.u-section-5 .u-group-3 {
+  width: 196px;
+  min-height: 196px;
+  height: auto;
+  margin: 0 auto 0 0;
+}
+
+.u-section-5 .u-container-layout-5 {
+  padding: 30px;
+}
+
+.u-section-5 .u-text-5 {
+  font-weight: 700;
+  font-size: 4.5rem;
+  margin: 0 auto;
+}
+
+.u-section-5 .u-text-6 {
+  margin: 46px 0 0;
+}
+
+.u-section-5 .u-text-7 {
+  margin: 20px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1494px;
+  }
+
+  .u-section-5 .u-group-1 {
+    min-height: 798px;
+    margin-right: auto;
+    margin-left: 0;
+    height: auto;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-top: 41px;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 57px;
+    margin-bottom: -196px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: 100%;
+    min-height: 519px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-bottom: 10px;
+  }
+
+  .u-section-5 .u-text-3 {
+    width: auto;
+    margin-top: -154px;
+    margin-left: 226px;
+  }
+
+  .u-section-5 .u-text-4 {
+    width: auto;
+    margin-top: 30px;
+    margin-bottom: 42px;
+    margin-left: 226px;
+  }
+
+  .u-section-5 .u-container-layout-4 {
+    padding-bottom: 10px;
+  }
+
+  .u-section-5 .u-text-6 {
+    width: auto;
+    margin-top: -154px;
+    margin-left: 226px;
+  }
+
+  .u-section-5 .u-text-7 {
+    width: auto;
+    margin-top: 30px;
+    margin-bottom: 42px;
+    margin-left: 226px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1680px;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 20px;
+    margin-bottom: 13px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-3 .u-gallery-inner-1 {
-    grid-template-columns: repeat(1, auto);
+  .u-section-5 .u-repeater-1 {
+    min-height: 742px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-top: 0;
+    padding-bottom: 3px;
+  }
+
+  .u-section-5 .u-text-3 {
+    margin-top: 20px;
+    margin-left: 6px;
+  }
+
+  .u-section-5 .u-text-4 {
+    margin-bottom: 0;
+    margin-left: 6px;
+  }
+
+  .u-section-5 .u-container-layout-4 {
+    padding-top: 0;
+    padding-bottom: 3px;
+  }
+
+  .u-section-5 .u-text-6 {
+    margin-top: 20px;
+    margin-left: 6px;
+  }
+
+  .u-section-5 .u-text-7 {
+    margin-bottom: 0;
+    margin-left: 6px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1551px;
+  }
+
+  .u-section-5 .u-group-1 {
+    min-height: 706px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-image-1 {
+    height: 493px;
+    width: 493px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 0;
+    margin-bottom: -69px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-text-2 {
+    font-size: 3.75rem;
+  }
+
+  .u-section-5 .u-text-3 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-text-4 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-text-5 {
+    font-size: 3.75rem;
+  }
+
+  .u-section-5 .u-text-6 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-text-7 {
+    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1513px;
+  .u-section-5 .u-sheet-1 {
+    min-height: 1429px;
   }
 
-  .u-section-3 .u-gallery-1 {
-    height: 4231px;
+  .u-section-5 .u-group-1 {
+    min-height: 578px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-5 .u-image-1 {
+    height: 320px;
+    width: 320px;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-bottom: -106px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    min-height: 731px;
+  }
+
+  .u-section-5 .u-group-2 {
+    width: 150px;
+    min-height: 150px;
+    margin-right: 170px;
+  }
+
+  .u-section-5 .u-text-2 {
+    font-size: 3rem;
+  }
+
+  .u-section-5 .u-group-3 {
+    width: 150px;
+    min-height: 150px;
+    margin-right: 170px;
+  }
+
+  .u-section-5 .u-text-5 {
+    font-size: 3rem;
   }
 }
