--- a/About.css
+++ b/About.css
@@ -1,19 +1,30 @@
-.u-section-1 .u-sheet-1 {
-  min-height: 680px;
+ .u-section-1 {
+  min-height: 916px;
+}
+
+.u-section-1 .u-shape-1 {
+  height: 400px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-image-1 {
-  width: 632px;
-  height: 632px;
-  margin: 24px 0 0 auto;
+  width: 637px;
+  height: 796px;
+  --animation-custom_in-translate_x: -300px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: -340px auto 0 calc(((100% - 1140px) / 2));
 }
 
 .u-section-1 .u-group-1 {
   width: 570px;
-  min-height: 485px;
+  min-height: 486px;
   background-image: none;
   height: auto;
-  margin: -522px auto 61px 0;
+  margin: -699px calc(((100% - 1140px) / 2)) 0 auto;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -21,74 +32,133 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 0;
+  margin: 4px 0 0;
 }
 
 .u-section-1 .u-text-2 {
+  font-size: 1.5rem;
   margin: 32px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
+  border-style: none;
+  font-weight: 700;
   text-transform: uppercase;
-  font-weight: 600;
-  background-image: none;
   letter-spacing: 1px;
-  margin: 21px auto 0 0;
-  padding: 17px 40px 18px 38px;
+  background-image: none;
+  font-size: 1.125rem;
+  margin: 60px calc(((100% - 1140px) / 2) + 161px) 60px auto;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 754px;
+   .u-section-1 {
+    min-height: 880px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 608px;
+    height: 760px;
+    margin-left: calc(((100% - 940px) / 2));
   }
 
   .u-section-1 .u-group-1 {
-    width: 470px;
+    width: 435px;
+    min-height: 592px;
+    margin-top: -663px;
+    margin-right: calc(((100% - 940px) / 2));
     height: auto;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-bottom: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -88px;
+    margin-right: calc(((100% - 940px) / 2) + 63px);
   }
 }
 
 @media (max-width: 991px) {
+   .u-section-1 {
+    min-height: 831px;
+  }
+
   .u-section-1 .u-image-1 {
-    width: 360px;
-    height: 361px;
-    margin-top: 31px;
+    width: 444px;
+    height: 556px;
+    margin-top: -335px;
+    margin-left: calc(((100% - 720px) / 2));
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: -251px;
-    margin-bottom: 60px;
+    width: 360px;
+    min-height: 610px;
+    margin-top: -463px;
+    margin-right: calc(((100% - 720px) / 2));
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -72px;
+    margin-right: auto;
+    margin-left: calc(((100% - 720px) / 2) + 18px);
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 938px;
+   .u-section-1 {
+    min-height: 1209px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 555px;
+    margin-left: calc(((100% - 540px) / 2));
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 31px;
-    margin-bottom: 31px;
+    min-height: 553px;
+    margin-top: -28px;
+    margin-right: calc(((100% - 540px) / 2));
   }
 
   .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-1 .u-btn-1 {
+    margin: -16px calc(((100% - 540px) / 2) + 85px) 32px auto;
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 533px;
+   .u-section-1 {
+    min-height: 1128px;
   }
 
   .u-section-1 .u-image-1 {
     width: 340px;
-    height: 341px;
+    height: 425px;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
   .u-section-1 .u-group-1 {
     width: 340px;
+    margin-top: 43px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -39px;
+    margin-right: calc(((100% - 340px) / 2) + 28px);
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 592px;
@@ -99,19 +169,14 @@
 }
 
 .u-section-2 .u-text-2 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   font-weight: 600;
-  margin: 50px 196px 0 0;
+  margin: 50px 196px 60px 0;
 }
 
 .u-section-2 .u-btn-1 {
-  border-style: none;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 1px;
   background-image: none;
-  font-size: 1.125rem;
-  margin: 22px auto 22px 0;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
@@ -130,18 +195,7 @@
   }
 
   .u-section-2 .u-text-1 {
-    width: auto;
-    margin-top: 20px;
     margin-right: 7px;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-top: 20px;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin-top: 20px;
-    margin-bottom: 20px;
   }
 }
 
@@ -196,6 +250,7 @@
 
 .u-section-3 .u-text-2 {
   font-style: normal;
+  font-size: 1.125rem;
   margin: 30px 14px 0 0;
 }
 
@@ -225,6 +280,7 @@
 
 .u-section-3 .u-text-4 {
   font-style: normal;
+  font-size: 1.125rem;
   margin: 30px 14px 0 0;
 }
 
@@ -254,6 +310,7 @@
 
 .u-section-3 .u-text-6 {
   font-style: normal;
+  font-size: 1.125rem;
   margin: 30px 14px 0 0;
 }
 
@@ -430,344 +487,5 @@
 
   .u-section-4 .u-text-2 {
     margin-right: 0;
-  }
-} .u-section-5 {
-  background-image: none;
-}
-
-.u-section-5 .u-sheet-1 {
-  min-height: 955px;
-}
-
-.u-section-5 .u-group-1 {
-  min-height: 835px;
-  width: 658px;
-  height: auto;
-  margin: 60px 0 0 auto;
-}
-
-.u-section-5 .u-container-layout-1 {
-  padding: 25px 30px;
-}
-
-.u-section-5 .u-text-1 {
-  font-size: 1.25rem;
-  margin: 0 auto 0 0;
-}
-
-.u-section-5 .u-image-1 {
-  height: 580px;
-  margin-top: 85px;
-  margin-bottom: 0;
-  object-position: 93.01% 50%;
-}
-
-.u-section-5 .u-list-1 {
-  grid-template-rows: repeat(1, auto);
-  width: 482px;
-  margin: -835px auto 60px 0;
-}
-
-.u-section-5 .u-repeater-1 {
-  grid-template-columns: repeat(1, 100%);
-  min-height: 779px;
-  margin-left: 0;
-  margin-right: auto;
-  grid-gap: 10px;
-}
-
-.u-section-5 .u-container-layout-2 {
-  padding: 20px 30px;
-}
-
-.u-section-5 .u-group-2 {
-  width: 196px;
-  min-height: 196px;
-  height: auto;
-  margin: 0 auto 0 0;
-}
-
-.u-section-5 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-5 .u-text-2 {
-  font-weight: 700;
-  font-size: 4.5rem;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-text-3 {
-  margin: 46px 0 0;
-}
-
-.u-section-5 .u-text-4 {
-  margin: 20px 0 0;
-}
-
-.u-section-5 .u-container-layout-4 {
-  padding: 20px 30px;
-}
-
-.u-section-5 .u-group-3 {
-  width: 196px;
-  min-height: 196px;
-  height: auto;
-  margin: 0 auto 0 0;
-}
-
-.u-section-5 .u-container-layout-5 {
-  padding: 30px;
-}
-
-.u-section-5 .u-text-5 {
-  font-weight: 700;
-  font-size: 4.5rem;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-text-6 {
-  margin: 46px 0 0;
-}
-
-.u-section-5 .u-text-7 {
-  margin: 20px 0 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 1494px;
-  }
-
-  .u-section-5 .u-group-1 {
-    min-height: 798px;
-    margin-right: auto;
-    margin-left: 0;
-    height: auto;
-  }
-
-  .u-section-5 .u-image-1 {
-    margin-top: 41px;
-  }
-
-  .u-section-5 .u-list-1 {
-    margin-top: 57px;
-    margin-bottom: -196px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-5 .u-repeater-1 {
-    grid-template-columns: 100%;
-    min-height: 519px;
-  }
-
-  .u-section-5 .u-container-layout-2 {
-    padding-bottom: 10px;
-  }
-
-  .u-section-5 .u-text-3 {
-    width: auto;
-    margin-top: -154px;
-    margin-left: 226px;
-  }
-
-  .u-section-5 .u-text-4 {
-    width: auto;
-    margin-top: 30px;
-    margin-bottom: 42px;
-    margin-left: 226px;
-  }
-
-  .u-section-5 .u-container-layout-4 {
-    padding-bottom: 10px;
-  }
-
-  .u-section-5 .u-text-6 {
-    width: auto;
-    margin-top: -154px;
-    margin-left: 226px;
-  }
-
-  .u-section-5 .u-text-7 {
-    width: auto;
-    margin-top: 30px;
-    margin-bottom: 42px;
-    margin-left: 226px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 1680px;
-  }
-
-  .u-section-5 .u-list-1 {
-    margin-top: 20px;
-    margin-bottom: 13px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-repeater-1 {
-    min-height: 742px;
-  }
-
-  .u-section-5 .u-container-layout-2 {
-    padding-top: 0;
-    padding-bottom: 3px;
-  }
-
-  .u-section-5 .u-text-3 {
-    margin-top: 20px;
-    margin-left: 6px;
-  }
-
-  .u-section-5 .u-text-4 {
-    margin-bottom: 0;
-    margin-left: 6px;
-  }
-
-  .u-section-5 .u-container-layout-4 {
-    padding-top: 0;
-    padding-bottom: 3px;
-  }
-
-  .u-section-5 .u-text-6 {
-    margin-top: 20px;
-    margin-left: 6px;
-  }
-
-  .u-section-5 .u-text-7 {
-    margin-bottom: 0;
-    margin-left: 6px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 1551px;
-  }
-
-  .u-section-5 .u-group-1 {
-    min-height: 706px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-5 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-5 .u-image-1 {
-    height: 493px;
-    width: 493px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-5 .u-list-1 {
-    margin-top: 0;
-    margin-bottom: -69px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-5 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-5 .u-text-2 {
-    font-size: 3.75rem;
-  }
-
-  .u-section-5 .u-text-3 {
-    margin-left: 0;
-  }
-
-  .u-section-5 .u-text-4 {
-    margin-left: 0;
-  }
-
-  .u-section-5 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-5 .u-container-layout-5 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-5 .u-text-5 {
-    font-size: 3.75rem;
-  }
-
-  .u-section-5 .u-text-6 {
-    margin-left: 0;
-  }
-
-  .u-section-5 .u-text-7 {
-    margin-left: 0;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-5 .u-sheet-1 {
-    min-height: 1429px;
-  }
-
-  .u-section-5 .u-group-1 {
-    min-height: 578px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-image-1 {
-    height: 320px;
-    width: 320px;
-  }
-
-  .u-section-5 .u-list-1 {
-    margin-bottom: -106px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-5 .u-repeater-1 {
-    min-height: 731px;
-  }
-
-  .u-section-5 .u-group-2 {
-    width: 150px;
-    min-height: 150px;
-    margin-right: 170px;
-  }
-
-  .u-section-5 .u-text-2 {
-    font-size: 3rem;
-  }
-
-  .u-section-5 .u-group-3 {
-    width: 150px;
-    min-height: 150px;
-    margin-right: 170px;
-  }
-
-  .u-section-5 .u-text-5 {
-    font-size: 3rem;
   }
 }
